# document-intelligence-pipeline

./: .env.example  .gitignore  COURSE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
lessons/01_document_parsing/: README.md  exercise.py
lessons/02_structured_extraction/: README.md  exercise.py
lessons/03_schema_design/: README.md  exercise.py
lessons/04_confidence_scoring/: README.md  exercise.py
lessons/05_review_queue/: README.md  exercise.py
lessons/06_production_api/: README.md
lessons/07_vision_ocr/: README.md  exercise.py
lessons/08_dockling/: README.md  exercise.py
lessons/09_agentic_workflow/: README.md  exercise.py
lessons/10_document_qa/: README.md  exercise.py
migrations/: 001_initial.sql
schemas/: invoice.yaml  logistics.yaml
src/docint/: __init__.py
src/docint/api/: main.py
src/docint/api/routes/: documents.py  review.py
src/docint/extraction/: __init__.py  confidence.py  extractor.py
src/docint/extraction/schemas/: __init__.py  base.py  invoice.py  logistics.py  registry.py
src/docint/parsers/: __init__.py  base.py  docx_parser.py  image.py  pdf.py  xlsx_parser.py
src/docint/pipeline/: __init__.py  orchestrator.py  review_queue.py
src/docint/storage/: __init__.py  models.py  repository.py
tests/: test_extraction.py  test_parsers.py
